--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=8080
 MONGODB=mongodb+srv://pauloC9:paulo321@cluster0.rtvhiq2.mongodb.net/Adivas-C9?retryWrites=true&w=majority
+SECRET='SuperSecreto'
